cmake_minimum_required(VERSION 2.6)

project("game_text" C)

enable_testing()
include(CTest)

set(CMAKE_C_FLAGS "-std=c99 -g -Wall --coverage")

add_executable(game_text game_text.c)
add_library(game game.c game_aux.c queue.c game_tools.c)
target_link_libraries(game_text game)

add_executable(game_test_lbaggio game_test_lbaggio.c)
target_link_libraries(game_test_lbaggio game)
add_test(test_lbaggio_dummy ./game_test_lbaggio dummy)
add_test(test_lbaggio_game_default ./game_test_lbaggio game_default)
add_test(test_lbaggio_game_default_solution ./game_test_lbaggio game_default_solution)
add_test(test_lbaggio_game_restart ./game_test_lbaggio game_restart)
add_test(test_lbaggio_game_play_move ./game_test_lbaggio game_play_move)
add_test(test_lbaggio_game_new ./game_test_lbaggio game_new)
add_test(test_lbaggio_game_equal ./game_test_lbaggio game_equal)
add_test(test_lbaggio_game_set_expected_nb_tents_row ./game_test_lbaggio game_set_expected_nb_tents_row)
add_test(test_lbaggio_game_set_expected_nb_tents_col ./game_test_lbaggio game_set_expected_nb_tents_col)
add_test(test_lbaggio_game_get_expected_nb_tents_row ./game_test_lbaggio game_get_expected_nb_tents_row)
add_test(test_lbaggio_game_get_expected_nb_tents_col ./game_test_lbaggio game_get_expected_nb_tents_col)
add_test(test_lbaggio_game_get_expected_nb_tents_all ./game_test_lbaggio game_get_expected_nb_tents_all)
add_test(test_lbaggio_game_get_current_nb_tents_row ./game_test_lbaggio game_get_current_nb_tents_row)
add_test(test_lbaggio_game_get_current_nb_tents_col ./game_test_lbaggio game_get_current_nb_tents_col)
add_test(test_lbaggio_game_get_current_nb_tents_all ./game_test_lbaggio game_get_current_nb_tents_all)
add_test(test_lbaggio_game_new_empty_ext ./game_test_lbaggio game_new_empty_ext)
add_test(test_lbaggio_game_undo ./game_test_lbaggio game_undo)
add_test(test_lbaggio_game_redo ./game_test_lbaggio game_redo)
add_test(test_lbaggio_game_fill_grass_row ./game_test_lbaggio game_fill_grass_row)
add_test(test_lbaggio_game_fill_grass_col ./game_test_lbaggio game_fill_grass_col)


add_executable(game_test_selebreton game_test_selebreton.c)
target_link_libraries(game_test_selebreton game)
add_test(test_selebreton_dummy ./game_test_selebreton dummy)
add_test(test_selebreton_game_get_square ./game_test_selebreton game_get_square)
add_test(test_selebreton_game_set_square ./game_test_selebreton game_set_square)
add_test(test_selebreton_game_fill_grass_row ./game_test_selebreton game_fill_grass_row)
add_test(test_selebreton_game_fill_grass_col ./game_test_selebreton game_fill_grass_col)
add_test(test_selebreton_game_check_move ./game_test_selebreton game_check_move)


add_executable(game_test_sbade game_test_sbade.c)
target_link_libraries(game_test_sbade game)
add_test(test_sbade_dummy ./game_test_sbade dummy)
add_test(test_sbade_game_equal ./game_test_sbade game_equal)
add_test(test_sbade_game_get_expected_nb_tents_row ./game_test_sbade game_get_expected_nb_tents_row)
add_test(test_sbade_game_get_expected_nb_tents_col ./game_test_sbade game_get_expected_nb_tents_col)
add_test(test_sbade_game_get_expected_nb_tents_all ./game_test_sbade game_get_expected_nb_tents_all)


add_executable(game_test_dmimpungugra game_test_dmimpungugra.c)
target_link_libraries(game_test_dmimpungugra game)
add_test(test_dmimpungugra_dummy ./game_test_dmimpungugra dummy)
add_test(test_dmimpungugra_game_new ./game_test_dmimpungugra game_new)
add_test(test_dmimpungugra_game_new_empty ./game_test_dmimpungugra game_new_empty)
add_test(test_dmimpungugra_game_delete ./game_test_dmimpungugra game_delete)
add_test(test_dmimpungugra_game_is_over ./game_test_dmimpungugra game_is_over)
add_test(test_dmimpungugra_game_copy ./game_test_dmimpungugra game_copy)
add_test(test_dmimpungugra_game_get_current_nb_tents_all ./game_test_dmimpungugra game_get_current_nb_tents_all)